added websites section link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
                         
                     </a>
                 </li>
-
+                <li>
+                    <a href="https://darrencarlin.com/websites" target="_blank">
+                        <h2>Websites</h2>
+                        <p>Websites I have built professionally for freelance clients can be viewed here.</p>
+                    </a>
+                </li>
 
                 <li>
                     <a href="pdf/darrenCarlinResume.pdf" target="_blank">
@@ -71,7 +76,7 @@
         <section class="contact" id="contact">
             <h4>Contact</h4>
             <p>If you are a small business or individual who is looking for a stand out presence on the web or if you are a
-                developer or desginer who wants to collaborate on a project you can <a href="mailto:dazftw@gmail.com" class="email">email me</a></p>
+                developer or desginer who wants to collaborate on a project you can <a href="mailto:hello@darrencarlin.com" class="email">email me</a></p>
                 <p>Alternatively you can reach out to me in other places such as
                         <a href="https://www.linkedin.com/in/darrencarlin/" target="_blank" class="linkedin">LinkedIn</a>,
                         <a href="http://instagram.com/dazftw" target="_blank" class="instagram">Instagram</a>,
