--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <main>
         <div class="image">
-            <img alt="A photo of Darren Carlin" src="/images/me.jpg">
+            <img alt="A photo of Darren Carlin" src="images/me.jpg">
         </div>
         <section class="about" id="about">
             <h4>About</h4>
