--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="dist/css/dazzle.min.css" rel="stylesheet">
 </head>
 
-<body class="grid">
+<body>
     <header>
         <h1>Darren J Carlin</h1>
         <h4>Creative Mindset, Technical Abilities</h4>
