--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://darrencarlin.com/websites" target="_blank">
+                    <a href="websites.html">
                         <h2>Websites</h2>
                         <p>Websites I have built professionally for freelance clients can be viewed here.</p>
                     </a>
