--- a/websites.html
+++ b/websites.html
@@ -10,7 +10,7 @@
     <link href="dist/css/dazzle.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="websites">
     <header>
         <h1>Darren J Carlin</h1>
         <h4>Creative Mindset, Technical Abilities</h4>
@@ -18,19 +18,26 @@
     <nav>
         <ul>
             <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#work">Work</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
+                <a href="index.html">Back</a>
             </li>
         </ul>
     </nav>
 
     <main>
-        Websites
+        <div class="gallery">
+            <div class="img">
+                <a href="http://makisushirolls.com">
+                    <img src="images/maki.png" alt="">
+                </a>
+            </div>
+            <div class="img">
+                <a href="http://phillyscropshop.com">
+                    <img src="images/cropshop.png" alt="">
+                </a>
+
+            </div>
+
+        </div>
     </main>
 
     <footer>
