--- a/websites.html
+++ b/websites.html
@@ -29,12 +29,27 @@
                 <a href="http://makisushirolls.com">
                     <img src="images/maki.png" alt="">
                 </a>
+                <ul>
+                    <li>Technologies:</li>
+                    <li>HTML5</li>
+                    <li>CSS3 (SCSS)</li>
+                    <li>Javascript</li>
+                    <li>PHP</li>
+                </ul>
+         
             </div>
             <div class="img">
                 <a href="http://phillyscropshop.com">
                     <img src="images/cropshop.png" alt="">
                 </a>
-
+                <ul>
+                    <li>Technologies:</li>
+                    <li>HTML5</li>
+                    <li>CSS3 (SCSS)</li>
+                    <li>Javascript</li>
+                    <li>Logo Design</li>
+                </ul>
+          
             </div>
 
         </div>
