load animation / 404 page

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
             <li>
                 <a href="#work" role="link">Work</a>
             </li>
-            <li>
+            <li> 
                 <a href="#contact" role="link">Contact</a>
             </li>
         </ul>
     </nav>
     <main role="main">
-        <div class="image" role="presentation">
-            <img alt="A photo of Darren Carlin" src="images/me.jpg"> </div>
+        <div class="image load" role="presentation" >
+            <img alt="A photo of Darren Carlin" src="images/me.jpg"> 
+        </div>
         <section class="about" id="about">
             <h4>About</h4>
             <p>Hi, I'm Darren! I am a
