--- a/websites.html
+++ b/websites.html
@@ -29,10 +29,17 @@
             <div class="img" role="presentation">
                 <a href="http://makisushirolls.com" role="link" target="_blank">
                     <img src="images/maki.png" alt="Maki Sushi Roll Logo"> </a>
+                    <p>Maki Sushi Rolls Website</p>
             </div>
             <div class="img" role="presentation">
                 <a href="http://phillyscropshop.com" role="link" target="_blank">
                     <img src="images/cropshop.png" alt="Philly's Crop Shop Logo"> </a>
+                    <p>Phillys Crop Shop Website</p>
+            </div>
+            <div class="img" role="presentation">
+                <a href="https://darrencarlin.com/websites/pokemon" role="link" target="_blank">
+                    <img src="images/pokemon.png" alt="Pokemon Logo"> </a>
+                    <p> Pokemon Memory Game</p>
             </div>
         </div>
     </main>
