--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </li>
                 <li>
                     <a href="websites.html">
-                        <h2>Websites</h2>
-                        <p>Websites I have built professionally for freelance clients can be viewed here.</p>
+                        <h2>Websites / Projects</h2>
+                        <p>Websites &amp; Projects I have built for fun or professionally for freelance clients can be viewed here.</p>
                     </a>
                 </li>
                 <li>
