lots of changes (counters / revamped projects section)

--- a/websites.html
+++ b/websites.html
@@ -7,6 +7,13 @@
         name="description">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>Darren Carlin ~ Work</title>
     <link href="images/favicon.ico" rel="icon">
     <link href="dist/css/dazzle.min.css" rel="stylesheet">
@@ -25,23 +32,89 @@
         </ul>
     </nav>
     <main>
-        <div class="gallery">
+        <section class="work" id="work">
+            <h3>Projects</h3>
+            <h4>
+                <a href="https://github.com/darrencarlin/Progress-Bar-Library">Progress Bar Library</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut.</p>
+            <h4>
+                <a href="https://github.com/darrencarlin/dazzle">Dazzle</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut.</p>
+            <h4>
+                <a href="https://github.com/darrencarlin/dazzle">Pokemon Memory Game</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem, ullam corrupti vero.</p>
+            <h3>Work</h3>
+            <h4>
+                <a href="https://github.com/darrencarlin/Babies-Name-App">Babies Name Application</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut. Odit beatae animi veritatis sint
+                distinctio similique.</p>
+            <h4>
+                <a href="https://github.com/darrencarlin/Personal-Inflation-Calculator">Personal Inflation Calculator</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem.</p>
+            <h4>
+                <a href="https://github.com/darrencarlin/MakiSushiRolls">Maki Sushi Rolls</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem.</p>
+
+            <h4>
+                <a href="https://github.com/darrencarlin/Phillys-Crop-Shop">Phillys Crop Shop</a>
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
+                qui animi exercitationem.</p>
+        </section>
+        <!-- <div class="gallery">
             <div class="img" role="presentation">
                 <a href="http://makisushirolls.com" role="link" target="_blank">
                     <img src="images/maki.png" alt="Maki Sushi Roll Logo"> </a>
-                    <p>Maki Sushi Rolls Website</p>
+                <p>Maki Sushi Rolls Website</p>
+                <p>
+                    <a href="https://github.com/darrencarlin/MakiSushiRolls">GitHub Repository</a>
+                </p>
             </div>
             <div class="img" role="presentation">
                 <a href="http://phillyscropshop.com" role="link" target="_blank">
                     <img src="images/cropshop.png" alt="Philly's Crop Shop Logo"> </a>
-                    <p>Phillys Crop Shop Website</p>
+                <p>Phillys Crop Shop Website</p>
+                <p>
+                    <a href="https://github.com/darrencarlin/Phillys-Crop-Shop">GitHub Repository</a>
+                </p>
             </div>
             <div class="img" role="presentation">
-                <a href="https://darrencarlin.com/websites/pokemon" role="link" target="_blank">
-                    <img src="images/pokemon.png" alt="Pokemon Logo"> </a>
-                    <p> Pokemon Memory Game</p>
+                <a href="https://darrencarlin.com/projects/pokemon" role="link" target="_blank">
+                    <img src="images/pokemon.png" alt="Pokemon Image"> </a>
+                <p> Pokemon Memory Game</p>
+                <p>
+                    <a href="https://github.com/darrencarlin/pokemon-memory-game">GitHub Repository</a>
+                </p>
             </div>
-        </div>
+            <div class="img" role="presentation">
+                <a href="https://darrencarlin.github.io/Progress-Bar-Library/" role="link" target="_blank">
+                    <img src="images/progress.png" alt="Progress Image"> </a>
+                <p> Progress Bar JavaScript Library </p>
+                <p>
+                    <a href="https://github.com/darrencarlin/Progress-Bar-Library">GitHub Repository</a>
+                </p>
+            </div>
+            <div class="img" role="presentation">
+                <a href="https://darrencarlin.github.io/Weather-App-Coding-Test/" role="link" target="_blank">
+                    <img src="images/weather.png" alt="Weather Image"> </a>
+                <p> Weather App (VueJs) </p>
+                <p>
+                    <a href="https://github.com/darrencarlin/Weather-App-Coding-Test">GitHub Repository</a>
+                </p>
+            </div>
+        </div> -->
     </main>
     <footer role="contentinfo">
         <small role="complementary"> &copy;
@@ -59,7 +132,7 @@
     <script>
         WebFont.load({
             google: {
-                families: ["Roboto:400,700", "Roboto+Slab:400,700"]
+                families: ['Nunito:400,700', 'Nunito+Sans|Nunito:400,700']
             }
         });
     </script>
