added code snippets

--- a/websites.html
+++ b/websites.html
@@ -16,13 +16,16 @@
     <meta name="theme-color" content="#ffffff">
     <title>Darren Carlin ~ Work</title>
     <link href="images/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
     <link href="dist/css/dazzle.min.css" rel="stylesheet">
 </head>
 
 <body class="websites">
     <header role="banner">
         <h1>Darren J Carlin</h1>
-        <h4>Creative Mindset, Technical Abilities</h4>
+        <h3>Creative Mindset, Technical Abilities</h3>
     </header>
     <nav>
         <ul>
@@ -35,43 +38,136 @@
         <section class="work" id="work">
             <h3>Projects</h3>
             <h4>
-                <a href="https://github.com/darrencarlin/Progress-Bar-Library">Progress Bar Library</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/Progress-Bar-Library">Progress Bar Library</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code1.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut.</p>
+            <p>A small, easy to initialize library that allows custom settings. Its purpose is to display a visually pleasing
+                progress bar on either the top or the bottom of the users screen showing how far a user has scrolled. Built
+                from scratch using Object Orientated JavaScript, ES6 and Gulp.<hr> </p>
             <h4>
-                <a href="https://github.com/darrencarlin/dazzle">Dazzle</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/dazzle">Dazzle</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code3.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut.</p>
+            <p>A front-end boilerplate I have developed and continue to iterate on. I use this when starting any new personal
+                or freelancing projects. It has various additions for Google Fonts and Google Analytics in order to acheive
+                a perfect Google PageSpeed Insights score. Built with HTML5, SCSS, JavaScript and Gulp.
+                <hr>
+            </p>
             <h4>
-                <a href="https://github.com/darrencarlin/dazzle">Pokemon Memory Game</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/pokemon-memory-game">Pokemon Memory Game</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code4.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem, ullam corrupti vero.</p>
+            <p>A pokemon memory game that utilizes timing events, live database leaderboards, difficulty modes and audio. Built
+                with HTML5, SCSS, JavaScript ES6, Google Firebase <hr></p>
             <h3>Work</h3>
             <h4>
-                <a href="https://github.com/darrencarlin/Babies-Name-App">Babies Name Application</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/Babies-Name-App">Babies Name Application</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a href="https://www.cso.ie/en/interactivezone/visualisationtools/babynamesofireland/">Website</a>
+                    <i class="fas fa-link"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code6.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem, ullam corrupti vero. Atque architecto rerum aut. Odit beatae animi veritatis sint
-                distinctio similique.</p>
+            <p>A project while working at the Central Statistics Office as a front end developer. The Babies Name of Ireland
+                application utilizes a straightforward user interface that accepts a name and year of birth as input. It
+                provides a insight to the popularity of that name from 1964 -
+                <span id="year"> </span>. Also providing 'print your own certficiate' functionality by allowing you to download a custom pdf
+                with your insight. Built with HTML5, CSS, JavaScript including jQuery, JSON and AJAX <hr></p>
             <h4>
-                <a href="https://github.com/darrencarlin/Personal-Inflation-Calculator">Personal Inflation Calculator</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/Personal-Inflation-Calculator">Personal Inflation Calculator</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a href="https://cso.ie/en/index.html">Due for release July 2018</a>
+                    <i class="fas fa-link"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code2.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem.</p>
+            <p>A project while working at the Central Statistics Office as a front end developer. The Personal Inflation calculator
+                provides insight to personal inflation rates in Ireland through a new visually interactive user interface
+                using coins over previous verisons which incorporated simple text input fields. Built with HTML5, SCSS, JavaScript
+                including jQuery, JSON and AJAX<hr>
+            </p>
             <h4>
-                <a href="https://github.com/darrencarlin/MakiSushiRolls">Maki Sushi Rolls</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/MakiSushiRolls">Maki Sushi Rolls</a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a href="https://makisushirolls.com/">Website</a>
+                    <i class="fas fa-link"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code7.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem.</p>
+            <p>Freelance work for a small sushi establishment. Mobile first and responsive this website has a unique element
+                at the top of the page to quickly inform the user whether or not the business is currently open. Built with
+                HTML5 SCSS, JavaScript and PHP<hr>
+            </p>
 
             <h4>
-                <a href="https://github.com/darrencarlin/Phillys-Crop-Shop">Phillys Crop Shop</a>
+                <div class="link-container">
+                    <a href="https://github.com/darrencarlin/Phillys-Crop-Shop">Phillys Crop Shop
+                    </a>
+                    <i class="fab fa-github"></i>
+                </div>
+                <div class="link-container">
+                    <a href="http://phillyscropshop.com">Website
+                    </a>
+                    <i class="fas fa-link"></i>
+                </div>
+                <div class="link-container">
+                    <a data-fancybox="gallery" href="images/code5.png">
+                        Code Snippet
+                    </a>
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus beatae consequatur et. Odit adipisci soluta
-                qui animi exercitationem.</p>
+            <p>Freelance work for a Hair Salon. Mobile first and responsive this website was built to give the client an online
+                presence to compliment their social media platforms on Facebook and Instagram. Built with HTML5, SCSS and
+                JavaScript including jQuery<hr></p>
         </section>
         <!-- <div class="gallery">
             <div class="img" role="presentation">
@@ -120,6 +216,9 @@
         <small role="complementary"> &copy;
             <span id="year"> </span> Darren Carlin. All Rights Reserved</small>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script src="dist/js/script.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29895478-1"></script>
     <script>
