--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h3>Contact</h3>
             <p>If you are a small business or individual who is looking for a stand out presence on the web or if you are a
                 developer or desginer who wants to collaborate on a project you can
-                <a href="mailto:hello@darrencarlin.com" role="link" class="email">email me</a>
+                <a href="mailto:hello@darrencarlin.com" role="link" class="email">email me.</a>
             </p>
             <p>Alternatively you can reach out to me in other places such as
                 <a href="https://www.linkedin.com/in/darrencarlin/" target="_blank" role="link" class="linkedin">LinkedIn</a>,
