--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="about" id="about">
             <h3>About</h3>
             <p>Hi, I'm Darren! I am a
-                <span>Front-End Web Developer</span> from Cork City, Ireland currently living in NYC, United States.</p>
+                <span>Front-End Web Developer</span> from Cork City, Ireland currently living in NYC.</p>
             <p>Before moving to NYC in May 2018 I worked full time at the Central Statistics Office in Cork building interactive
                 web applications from statistical data.</p>
             <p>I graduated from University College Cork in 2016 with a Bachelor's degree in Social Science and again in 2017
